2005-04-01  Jan Beulich  <jbeulich@novell.com>

	* i386-dis.c (INVLPG_Fixup): Decode rdtscp; change code to allow for
	easier future additions.

2005-03-31  Jerome Guitton  <guitton@gnat.com>

	* configure.in: Check for basename.
	* configure: Regenerate.
	* config.in: Ditto.

2005-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (SEG_Fixup): New.
	(Sv): New.
	(dis386): Use "Sv" for 0x8c and 0x8e.

2005-03-21  Jan-Benedict Glaw  <jbglaw@lug-owl.de>
	    Nick Clifton  <nickc@redhat.com>
	    
	* vax-dis.c: (entry_addr): New varible:  An array of user supplied
	function entry mask addresses.
	(entry_addr_occupied_slots): New variable: The number of occupied
	elements in entry_addr. 
	(entry_addr_total_slots): New variable: The total number of
	elements in entry_addr.
	(parse_disassembler_options): New function.  Fills in the entry_addr
	array.
	(free_entry_array): New function.  Release the memory used by the
	entry addr array.  Suppressed because there is no way to call it.
	(is_function_entry): Check if a given address is a function's
	start address by looking at supplied entry mask addresses and
	symbol information, if available.
	(print_insn_vax): Use parse_disassembler_options and is_function_entry.

2005-03-23  H.J. Lu  <hongjiu.lu@intel.com>

	* cris-dis.c (print_with_operands): Use ~31L for long instead
	of ~31.

2005-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	* mmix-opc.c (O): Revert the last change.
	(Z): Likewise.

2005-03-19  H.J. Lu  <hongjiu.lu@intel.com>

	* mmix-opc.c (O): Use 24UL instead of 24 for unsigned long.
	(Z): Likewise.

2005-03-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* mmix-opc.c (O, Z): Force expression as unsigned long.

2005-03-18  Nick Clifton  <nickc@redhat.com>

	* ip2k-asm.c: Regenerate.
	* op/opcodes.pot: Regenerate.

2005-03-16  Nick Clifton  <nickc@redhat.com>
	    Ben Elliston  <bje@au.ibm.com>

	* configure.in (werror): New switch: Add -Werror to the
	compiler command line.  Enabled by default.  Disable via